[package]
name = "rtlp-lib"
version = "0.1.0"
edition = "2021"
authors = ["Maciej Grochowski <maciej.grochowski@pm.me>"]
license = "BSD"
description = "This create provide structures to parse PCI TLPs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = { git = "https://github.com/dzamlo/rust-bitfield" }
